Fixed invisible style

--- a/src/components/InfoBox/InfoBox.module.scss
+++ b/src/components/InfoBox/InfoBox.module.scss
@@ -20,5 +20,6 @@
 }
 
 .invisible {
-  width: 0;
+  display: none;
+  visibility: hidden;
 }
