--- a/src/components/MessageBox/MessageBox.module.scss
+++ b/src/components/MessageBox/MessageBox.module.scss
@@ -22,5 +22,6 @@
 }
 
 .invisible {
-  width: 0;
+  display: none;
+  visibility: hidden;
 }
